tests/test107.rael.exp
22
Error [2:1]: ';' has to be inside a loop
| ;
| ^
