tests/test107.rael
log 22
;
log 88